objects/ASI_eForm_User_ID_Request__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_HR_Business_Department_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HR/Business Department Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_ID_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_IT_Action__c</fullName>
        <label>IT Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Invalid Submission</fullName>
                </value>
                <value>
                    <fullName>Work In Progress</fullName>
                    <default>true</default>
                    <label>Work In Progress</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Line_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_ID_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Owner_Full_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; OwnerId , Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_PR_Email__c</fullName>
        <label>Owership Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Preview_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preview Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_ID_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Read_Only_User_Name__c</fullName>
        <formula>IF(ISBLANK( ASI_eForm_User_Profile_Name__c) ,  ASI_eForm_First_Name__c  + &apos; &apos; + ASI_eForm_Last_Name__c , ASI_eForm_User_Profile_Name__r.ASI_eForm_First_Name__c+ &apos; &apos; + ASI_eForm_User_Profile_Name__r.ASI_eForm_Last_Name__c)</formula>
        <label>User Requested</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Reason__c</fullName>
        <label>Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Service_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Service_Period_From__c</fullName>
        <label>Service Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Service_Period_To__c</fullName>
        <label>Service Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Special_Requirement__c</fullName>
        <label>Special Requirement</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Submit_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Sys_Allow_Submit_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Allow Submit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Sys_User_Permission_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Permission Applied?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_User_Alias__c</fullName>
        <label>User Alias</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_User_Company__c</fullName>
        <label>User Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pernod Ricard Asia</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Asia Travel Retail</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard China</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Gulf</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard India</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Indonesia</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Japan</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Korea</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Malaysia</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Philippines</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Singapore</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Taiwan</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Thailand</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Vietnam</fullName>
                </value>
                <value>
                    <fullName>Premium Wine Brand</fullName>
                </value>
                <value>
                    <fullName>Chivas Brothers Ltd.</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Hong Kong Service Hub</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Travel Retail Asia</fullName>
                </value>
                <value>
                    <fullName>AMDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_User_Country__c</fullName>
        <label>User Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Gulf</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_User_Department__c</fullName>
        <label>User Department</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_eForm_User_Company__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Administration / Management Assistance / Facilities</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>General Management</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Systems &amp; Technology</fullName>
                </value>
                <value>
                    <fullName>Institutional / Public Affairs</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Retail Operations</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales (Domestic &amp; International Markets)</fullName>
                </value>
                <value>
                    <fullName>Supply Chain / Logistics / Customer Service</fullName>
                </value>
                <value>
                    <fullName>International Brand Development</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Innovation &amp; Commercial Development</fullName>
                </value>
                <value>
                    <fullName>Global IT Operation</fullName>
                </value>
                <value>
                    <fullName>Operational Excellence Projects</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Strategy and Business Development</fullName>
                </value>
                <value>
                    <fullName>Marketing &amp; Business Development</fullName>
                </value>
                <value>
                    <fullName>Public Affairs, S&amp;R</fullName>
                </value>
                <value>
                    <fullName>Strategy</fullName>
                </value>
                <value>
                    <fullName>Finance &amp; Operations</fullName>
                </value>
                <value>
                    <fullName>Luxury</fullName>
                </value>
                <value>
                    <fullName>Trade Marketing</fullName>
                </value>
                <value>
                    <fullName>Seagram China</fullName>
                </value>
                <value>
                    <fullName>Manufacturing &amp; Projects</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_User_Position__c</fullName>
        <label>User Position</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_User_Profile_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_eForm_User_Profile__c.ASI_eForm_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ASI_eForm_User_Profile__c.ASI_eForm_User_Company__c</field>
                <operation>equals</operation>
                <valueField>$User.CompanyName</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_eForm_User_Profile__c</referenceTo>
        <relationshipLabel>User ID Requests</relationshipLabel>
        <relationshipName>User_ID_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_sys_UserUniqueKey__c</fullName>
        <label>ASI_eForm_sys_UserUniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_eForm_sys_resubmit__c</fullName>
        <label>Sys_resubmit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>User ID Request</label>
    <listViews>
        <fullName>ASI_eForm_All_User_ID_Requests</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_IT_Action__c</columns>
        <columns>ASI_eForm_User_Profile_Name__c</columns>
        <columns>ASI_eForm_User_Company__c</columns>
        <columns>ASI_eForm_Read_Only_User_Name__c</columns>
        <columns>ASI_eForm_Effective_Date__c</columns>
        <columns>ASI_eForm_Owner_Full_Name__c</columns>
        <columns>ASI_eForm_User_Department__c</columns>
        <filterScope>Everything</filterScope>
        <label>All User ID Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_eForm_My_User_ID_Requests</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_IT_Action__c</columns>
        <columns>ASI_eForm_Effective_Date__c</columns>
        <columns>ASI_eForm_Read_Only_User_Name__c</columns>
        <columns>ASI_eForm_User_Company__c</columns>
        <columns>ASI_eForm_User_Department__c</columns>
        <columns>ASI_eForm_Owner_Full_Name__c</columns>
        <filterScope>Mine</filterScope>
        <label>My User ID Requests</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UIDRF-{0000000}</displayFormat>
        <label>Form No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User ID Requests</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_CN_Change_Profile</fullName>
        <active>true</active>
        <label>Change Profile (CN)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_CN_Change_Profile_Final</fullName>
        <active>true</active>
        <label>Change Profile Final (CN)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_CN_New_Employee_Permanent</fullName>
        <active>true</active>
        <label>New User ID Permanent (CN)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_CN_New_Employee_Permanent_Final</fullName>
        <active>true</active>
        <label>New User ID Permanent Final (CN)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_CN_New_Employee_Temporary</fullName>
        <active>true</active>
        <label>New User ID Temporary (CN)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_CN_New_Employee_Temporary_Final</fullName>
        <active>true</active>
        <label>New User ID Temporary Final (CN)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_CN_Remove_ID</fullName>
        <active>true</active>
        <label>Remove ID (CN)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_CN_Remove_ID_Final</fullName>
        <active>true</active>
        <label>Remove ID Final (CN)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_Change_Profile</fullName>
        <active>true</active>
        <label>Change Profile (HK)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_Change_Profile_Final</fullName>
        <active>true</active>
        <label>Change Profile Final (HK)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_New_Employee_Permanent</fullName>
        <active>true</active>
        <label>New User ID Permanent (HK)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_New_Employee_Permanent_Final</fullName>
        <active>true</active>
        <label>New User ID Permanent Final (HK)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_New_Employee_Temporary</fullName>
        <active>true</active>
        <label>New User ID Temporary (HK)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_New_Employee_Temporary_Final</fullName>
        <active>true</active>
        <label>New User ID Temporary Final (HK)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_Remove_ID</fullName>
        <active>true</active>
        <label>Remove ID (HK)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_Remove_ID_Final</fullName>
        <active>true</active>
        <label>Remove ID Final (HK)</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ASI_eForm_User_Request_Manager_Access__c</fullName>
        <label>ASI eForm User Request Manager Access</label>
    </sharingReasons>
    <validationRules>
        <fullName>ASI_eForm_Effective_Date_Past</fullName>
        <active>true</active>
        <errorConditionFormula>(ASI_eForm_Effective_Date__c  &lt;  TODAY()) &amp;&amp;   ISPICKVAL(ASI_eForm_Status__c, &quot;Draft&quot;) &amp;&amp; !ISPICKVAL( ASI_eForm_IT_Action__c , &quot;Invalid Submission&quot;)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Effective_Date__c</errorDisplayField>
        <errorMessage>Effective Date cannot be set to a past date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_Owner_Approver_Duplicate</fullName>
        <active>true</active>
        <errorConditionFormula>(ASI_eForm_HR_Business_Department_Manager__c = OwnerId ) ||
(ASI_eForm_Line_Manager__c = OwnerId )</errorConditionFormula>
        <errorMessage>Approver and Owner cannot be the same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_UIDR_User_Is_Not_Active</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(ASI_eForm_User_Profile_Name__c) &amp;&amp; !ASI_eForm_User_Profile_Name__r.ASI_eForm_Active__c</errorConditionFormula>
        <errorDisplayField>ASI_eForm_User_Profile_Name__c</errorDisplayField>
        <errorMessage>User Profile Selected is Not Active</errorMessage>
    </validationRules>
</CustomObject>